# csv-to-json

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: main.yml
app/tests/: conftest.py  test_csv_to_json.py
app/tests/data/: all-data.csv  all-data.json
