[tool.poetry]
name = "csv-to-json"
version = "0.1.0"
description = ""
authors = ["Solo Dolley <solo@cocreators.ee>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"
pydantic = "^1.9.0"
pre-commit = "^2.17.0"
pytest-snapshot = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
